# telegram-descriptive

./: .gitignore  README.md  databricks.yml  pyproject.toml
docs/: AGENT_TELEGRAM_DATA_CONTEXT.md  ANALYSIS_INVENTORY_for_telegram_port.md  ANALYSIS_INVENTORY_for_telegram_port_REVISED.md  README_telegram_data_resources.md  data_contracts.md  databricks_telegram_resources.agent.json  methods_language_detection.md  methods_random_walk_crawl.md  methods_tail_estimator.md  methods_topic_classification.md  telegram_descriptive_analysis_plan.md
jobs/: databricks_workflows.yml
notebooks/: 00_data_inventory_and_contracts.py  01_crawl_qa_and_walk_diagnostics.py  02_discovery_population_estimation.py  03_rank_tail_denominators.py  04_too_sample_construction.py  05_post_ingestion_audit.py  06_language_detection.py  06b_language_validation_and_adjudication.py  07_topic_taxonomy_and_classification.py  08_channel_message_analysis_frame.py  09_audience_concentration_and_proxy_failure.py  10_content_posting_and_engagement.py  11_link_forwarding_networks.py  12_missed_audience_sensitivity.py  13_robustness_and_sensitivity.py  14_reporting_exports.py
scripts/: telegram_databricks_resource_probe.py
src/telegram_descriptive/: __init__.py  config.py  io.py  notebook.py  plotting.py  qc.py  (+2 more)
tests/: conftest.py  test_bootstrap.py  test_chao.py  test_coverage.py  test_descriptive_helpers.py  test_language_aggregation.py  test_network_helpers.py  test_pipeline_registry.py  test_rank_tail.py  test_reporting_exports.py  test_saturation.py  test_table_contracts.py  test_topic_helpers.py
(+42 files in other folders)
